cambio font pt2

--- a/css/style_login.css
+++ b/css/style_login.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Playfair Display', sans-serif;
     text-align: center;
     /* Sostituisci il grigio (#f4f4f4) con un crema chiaro */
     background-color: #EAE1C1;
