--- a/css/style_register.css
+++ b/css/style_register.css
@@ -87,23 +87,24 @@
     font-family: inherit;
   }
   .form-container button:hover {
-    background-color: #13293F; /* Blu più scuro */
+    background-color: #13293F; 
   }
   
   /* Paragrafo in basso con link */
   .link-registrazione {
     margin-top: 10px;
     font-size: 0.9rem;
+    text-align: center;
+    align-items: center ;
   }
   .link-registrazione a {
-    color: #6c04fc; /* viola / personalizzabile */
+    color: #6c04fc; 
     text-decoration: none;
   }
   .link-registrazione a:hover {
     text-decoration: underline;
   }
   
-  /* ANIMAZIONE SHAKE (se la usi per errori) */
   @keyframes shake {
     0%   { transform: translateX(0); }
     20%  { transform: translateX(-10px); }
@@ -115,4 +116,18 @@
   .shake {
     animation: shake 0.4s;
   }
-  
+  .modal {
+    display: none;
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    border: 2px solid #ccc;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    z-index: 1000;
+  }
+  .modal.show {
+    display: block;
+  }
