--- a/css/style_password.css
+++ b/css/style_password.css
@@ -7,7 +7,7 @@
   
   /* Corpo con sfondo crema */
   body {
-    font-family: 'Playfair Display', serif; /* Se vuoi, importalo in <head> */
+    font-family: 'Playfair Display', serif; 
     background-color: #EAE1C1; /* Crema */
     color: #1D3B5B;           /* Blu scuro */
     display: flex;
@@ -22,7 +22,7 @@
     align-items: center;
     background-color: #fff; /* Box bianco in testa */
     padding: 10px 20px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Leggera ombra */
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
   }
   
   /* Logo in alto a sinistra */
@@ -32,7 +32,7 @@
   }
   .brand-logo {
     height: 40px;
-    /* width: auto; se preferisci */
+  
   }
   
   /* Link "Accedi"/"Iscriviti" */
@@ -70,7 +70,7 @@
   .subtitle {
     font-size: 0.9rem;
     margin-bottom: 15px;
-    color: #1D3B5B; /* può essere leggermente più chiaro, se preferisci */
+    color: #1D3B5B;
   }
   
   /* Input e bottone */
@@ -105,7 +105,7 @@
     display: block;
     margin-bottom: 15px;
     font-size: 0.8rem;
-    color: #6c04fc; /* viola o un altro colore a piacere */
+    color: #6c04fc; 
     text-decoration: none;
   }
   .cannot-reset:hover {
