--- a/css/style_register.css
+++ b/css/style_register.css
@@ -117,10 +117,10 @@
     transform: translate(-50%, -50%);
     background: white;
     padding: 20px;
-    border: 2px solid #ccc;
+    border: 2px #ccc;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
     z-index: 1000;
-    border-radius: 10%;
+    border-radius: 5%;
   }
   .modal.show {
     display: block;
