--- a/css/style_pagina_iniziale.css
+++ b/css/style_pagina_iniziale.css
@@ -154,7 +154,7 @@ button:hover {
 }
 h2 {
     font-size: 2em;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     color: rgb(8, 7, 91);
     text-align: center;}
 
@@ -163,6 +163,7 @@ h2 {
         flex-direction: column;
         align-items: center;
         margin-bottom: 60px;
+        margin-top: 20px;
         max-width: 500px;
         width: 100%;
       }
