--- a/css/style_pagina_iniziale.css
+++ b/css/style_pagina_iniziale.css
@@ -16,9 +16,10 @@
 body {
     font-family: 'CustomFont', sans-serif;
     text-align: center;
-    overflow-x: hidden; /* Blocca lo scroll orizzontale */
+    overflow-x: hidden;
     position: relative;
-    background-color:  #f5f1de;
+    background-color: #f5f1de;
+
 }
 
 .fade-section {
@@ -111,7 +112,7 @@ button:hover {
 
 /* Sezione immagini*/
 .next-section {
-    min-height: 40vh;
+    min-height: 20vh;
     overflow: hidden;
     position: relative;
     white-space: nowrap;
@@ -153,48 +154,55 @@ button:hover {
     align-items: center;
 }
 h2 {
-    font-size: 2em;
-    margin-bottom: 20px;
+    font-size: 5em;
+    margin-bottom: 10px;
     color: rgb(8, 7, 91);
-    text-align: center;}
+    text-align: center;
+    font-family: Songti TC;
+
+}
 
     .step {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-bottom: 60px;
+        margin-bottom: 45px;
         margin-top: 20px;
         max-width: 500px;
         width: 100%;
       }
   
       .circle {
-        background-color: #2e5a80;
-        color: white;
-        border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-weight: bold;
-        margin-bottom: 15px;
-        font-size: 1.2em;
-      }
+    background-color: #2e5a80;
+    color: white;
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    margin-bottom: 15px;
+    font-size: 1.8em;
+    font-family: Hiragino Mincho ProN;
+
+}
   
       .title_s {
-        font-size: 1.2em;
-        font-weight: bold;
-        margin-bottom: 8px;
-        text-align: center;
-      }
+    font-size: 2.2em;
+    font-weight: bold;
+    margin-bottom: 8px;
+    text-align: center;
+
+}
   
       .description {
-        font-size: 1em;
-        color: #555;
-        text-align: center;
-        line-height: 1.5;
-      }
+    font-size: 2em;
+    color: #555;
+    text-align: center;
+    line-height: 1.5;
+
+}
 
 
 .qrcode {
